# pandora

./: ARCHITECTURE.md  CHANGELOG.md  LICENSE  Morphism.hs  README.md  pandora.cabal
Core/: Composition.hs  Morphism.hs  Transformation.hs  Transformer.hs  Variant.hs
Pandora/: Core.hs  Data.hs  Functor.hs  Morphism.hs  Object.hs  Paradigm.hs  Pattern.hs
Pandora/Core/: Appliable.hs  Composition.hs  Functor.hs  Impliable.hs  Interpreted.hs  Morphism.hs  Transformation.hs  Variant.hs
Pandora/Functor/: Contravariant.hs  Covariant.hs  Invariant.hs
Pandora/Paradigm/: Algebraic.hs  Basis.hs  Controlflow.hs  Inventory.hs  Junction.hs  Primary.hs  Schemes.hs  Structure.hs
Pandora/Paradigm/Algebraic/: Exponential.hs  Functor.hs  One.hs  Product.hs  Sum.hs  Zero.hs
Pandora/Paradigm/Basis/: Backwards.hs  Capture.hs  Cofree.hs  Conclusion.hs  Constant.hs  Construction.hs  Continuation.hs  Edges.hs  Endo.hs  Fix.hs  Free.hs  Identity.hs  Instruction.hs  Jack.hs  Jet.hs  Kan.hs  Maybe.hs  Predicate.hs  Product.hs  Proxy.hs  Reverse.hs  Tagged.hs  Transformations.hs  Twister.hs  Validation.hs  Variation.hs  Wye.hs  Yoneda.hs
Pandora/Paradigm/Basis/Junction/: Composition.hs  Kan.hs  Transformer.hs
Pandora/Paradigm/Controlflow/: Effect.hs  Joint.hs  Observable.hs  Pipeline.hs
Pandora/Paradigm/Controlflow/Effect/: Adaptable.hs  Conditional.hs  Interpreted.hs  Schematic.hs  Transformer.hs
Pandora/Paradigm/Controlflow/Joint/: Adaptable.hs  Comonadic.hs  Interpreted.hs  Monadic.hs  Schematic.hs  Schemes.hs  Transformer.hs
Pandora/Paradigm/Inventory/: Ability.hs  Accumulator.hs  Environment.hs  Environmental.hs  Equipment.hs  Imprint.hs  Optics.hs  Provision.hs  Some.hs  State.hs  Stateful.hs  Storage.hs  Store.hs
Pandora/Paradigm/Inventory/Ability/: Gettable.hs  Modifiable.hs  Replaceable.hs  Settable.hs  Viewable.hs
Pandora/Paradigm/Inventory/Some/: Accumulator.hs  Equipment.hs  Imprint.hs  Optics.hs  Provision.hs  State.hs  Store.hs
Pandora/Paradigm/Junction/: Composition.hs  Kan.hs  Schemes.hs  Transformer.hs
Pandora/Paradigm/Junction/Schemes/: TU.hs  TUT.hs  TUV.hs  TUVW.hs  UT.hs  UTU.hs
Pandora/Paradigm/Primary/: Algebraic.hs  Auxiliary.hs  Functor.hs  Linear.hs  Object.hs  Transformer.hs
Pandora/Paradigm/Primary/Algebraic/: Exponential.hs  Functor.hs  One.hs  Product.hs  Sum.hs  Unit.hs  Void.hs  Zero.hs
Pandora/Paradigm/Primary/Functor/: Conclusion.hs  Constant.hs  Convergence.hs  Delta.hs  Edges.hs  Endo.hs  Equivalence.hs  Exactly.hs  Fix.hs  Flip.hs  Function.hs  Identity.hs  Maybe.hs  Predicate.hs  Product.hs  Proxy.hs  Tagged.hs  These.hs  Validation.hs  Variation.hs  Wedge.hs  Wye.hs
Pandora/Paradigm/Primary/Linear/: Matrix.hs  Vector.hs
Pandora/Paradigm/Primary/Object/: Boolean.hs  Denumerator.hs  Natural.hs  Numerator.hs  Ordering.hs
Pandora/Paradigm/Primary/Transformer/: Backwards.hs  Construction.hs  Continuation.hs  Day.hs  Flip.hs  Instruction.hs  Jack.hs  Jet.hs  Kan.hs  Outline.hs  Reverse.hs  Straight.hs  Tap.hs  Yoneda.hs
Pandora/Paradigm/Schemes/: PQ_.hs  PTU.hs  P_Q_T.hs  P_T.hs  TT.hs  TU.hs  TUT.hs  TUVW.hs  T_.hs  T_U.hs  UT.hs  UTU.hs  U_T.hs
Pandora/Paradigm/Structure/: Ability.hs  Binary.hs  Cartesian.hs  Concrete.hs  Graph.hs  Interface.hs  Modification.hs  Nonempty.hs  Property.hs  Rose.hs  Some.hs  Specific.hs  Splay.hs  Stack.hs  Stream.hs
Pandora/Paradigm/Structure/Ability/: Accessible.hs  Comprehension.hs  Convertible.hs  Deletable.hs  Focusable.hs  Insertable.hs  Measurable.hs  Monotonic.hs  Morphable.hs  Nonempty.hs  Nullable.hs  Possible.hs  Prefixed.hs  Rotatable.hs  Slidable.hs  Substructure.hs  Zipper.hs
Pandora/Paradigm/Structure/Concrete/: Binary.hs  Graph.hs  Stack.hs
Pandora/Paradigm/Structure/Interface/: Dictionary.hs  Set.hs  Stack.hs  Zipper.hs
Pandora/Paradigm/Structure/Modification/: Combinative.hs  Comprehension.hs  Nonempty.hs  Prefixed.hs  Round.hs  Tape.hs  (+1 more)
Pandora/Pattern/: Betwixt.hs  Category.hs  Functor.hs  Groupoid.hs  Junction.hs  Kernel.hs  Linear.hs  Morphism.hs  Object.hs  Operation.hs  Semigroupoid.hs  Transformation.hs  Transformer.hs
Pandora/Pattern/Functor/: Adjoint.hs  Alternative.hs  Applicative.hs  Avoidable.hs  Bindable.hs  Bivariant.hs  Comonad.hs  Contravariant.hs  Covariant.hs  Determinable.hs  Distributive.hs  Divariant.hs  Divisible.hs  Exclusive.hs  Extendable.hs  Extractable.hs  Invariant.hs  Liftable.hs  Lowerable.hs  Monad.hs  Monoidal.hs  Pointable.hs  Representable.hs  Semimonoidal.hs  Traversable.hs
Pandora/Pattern/Junction/: Composition.hs  Interpreted.hs  Schemes.hs  Transformer.hs
Pandora/Pattern/Linear/: Vector.hs
Pandora/Pattern/Morphism/: Flip.hs  Kleisli.hs  Lifted.hs  Straight.hs  Tensor.hs  Trip.hs
Pandora/Pattern/Object/: Chain.hs  Cycle.hs  Group.hs  Lattice.hs  Monoid.hs  Quasiring.hs  Ring.hs  Ringoid.hs  Semigroup.hs  Semilattice.hs  Semiring.hs  Setoid.hs
Pandora/Pattern/Operation/: Exponential.hs  One.hs  Product.hs  Sum.hs  Unit.hs  Zero.hs
Pandora/Pattern/Transformation/: Hoistable.hs  Liftable.hs  Lowerable.hs
Pandora/Pattern/Transformer/: Hoistable.hs  Liftable.hs  Lowerable.hs
Paradigm/: Basis.hs  Cofree.hs  Composition.hs  Conclusion.hs  Constant.hs  Fix.hs  Free.hs  Identity.hs  Inventory.hs  Kan.hs  Maybe.hs  Product.hs  Structure.hs  Yoneda.hs
Paradigm/Basis/: Cofree.hs  Composition.hs  Conclusion.hs  Constant.hs  Fix.hs  Free.hs  Functor.hs  Identity.hs  Kan.hs  Maybe.hs  Product.hs  Yoneda.hs
Paradigm/Basis/Functor/: Composition.hs  Transformer.hs
Paradigm/Basis/Junction/: Composition.hs  Transformer.hs
Paradigm/Inventory/: State.hs  Stateful.hs  Storage.hs
Paradigm/Structure/: Nonempty.hs  Stack.hs
Pattern/: Functor.hs  Morphism.hs  Object.hs
Pattern/Functor/: Adjoint.hs  Alternative.hs  Applicative.hs  Bindable.hs  Comonad.hs  Contravariant.hs  Covariant.hs  Distributive.hs  Exclusive.hs  Extendable.hs  Extractable.hs  Invariant.hs  Liftable.hs  Lowerable.hs  Monad.hs  Pointable.hs  Traversable.hs
Pattern/Object/: Chain.hs  Group.hs  Lattice.hs  Monoid.hs  Ringoid.hs  Semigroup.hs  Semilattice.hs  Setoid.hs
(+33 files in other folders)
