name:                pandora
version:             0.1.0
synopsis:            A box of patterns and paradigms
description:         Humble attempt to define a library for problem solving based on math abstractions.
homepage:            https://github.com/iokasimov/pandora
license:             MIT
license-file:        LICENSE
extra-source-files:  CHANGELOG.md
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2019 Murat Kasimov
category:            Data, Control
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/pandora.git

library
  exposed-modules:
    Pandora.Core
    Pandora.Pattern.Functor
    Pandora.Pattern.Object
    Pandora.Paradigm.Basis
    Pandora.Paradigm.Inventory
    Pandora.Paradigm.Structure
  other-modules:
    Pandora.Core.Morphism
    Pandora.Core.Composition
    Pandora.Core.Transformation
    Pandora.Core.Variant
    Pandora.Pattern.Functor.Covariant
    Pandora.Pattern.Functor.Contravariant
    Pandora.Pattern.Functor.Invariant
    Pandora.Pattern.Functor.Alternative
    Pandora.Pattern.Functor.Applicative
    Pandora.Pattern.Functor.Exclusive
    Pandora.Pattern.Functor.Pointable
    Pandora.Pattern.Functor.Extractable
    Pandora.Pattern.Functor.Traversable
    Pandora.Pattern.Functor.Distributive
    Pandora.Pattern.Functor.Bindable
    Pandora.Pattern.Functor.Extendable
    Pandora.Pattern.Functor.Adjoint
    Pandora.Pattern.Functor.Monad
    Pandora.Pattern.Functor.Comonad
    Pandora.Pattern.Functor.Liftable
    Pandora.Pattern.Functor.Lowerable
    Pandora.Pattern.Object.Setoid
    Pandora.Pattern.Object.Chain
    Pandora.Pattern.Object.Semigroup
    Pandora.Pattern.Object.Ringoid
    Pandora.Pattern.Object.Monoid
    Pandora.Pattern.Object.Group
    Pandora.Pattern.Object.Semilattice
    Pandora.Pattern.Object.Lattice
    Pandora.Paradigm.Basis.Junction.Composition
    Pandora.Paradigm.Basis.Junction.Transformer
    Pandora.Paradigm.Basis.Identity
    Pandora.Paradigm.Basis.Conclusion
    Pandora.Paradigm.Basis.Constant
    Pandora.Paradigm.Basis.Maybe
    Pandora.Paradigm.Basis.Product
    Pandora.Paradigm.Basis.Yoneda
    Pandora.Paradigm.Basis.Fix
    Pandora.Paradigm.Basis.Free
    Pandora.Paradigm.Basis.Cofree
    Pandora.Paradigm.Basis.Kan
    Pandora.Paradigm.Basis.Transformations
    Pandora.Paradigm.Inventory.Environmental
    Pandora.Paradigm.Inventory.Stateful
    Pandora.Paradigm.Inventory.Storage
    Pandora.Paradigm.Structure.Nonempty
    Pandora.Paradigm.Structure.Stack
  default-extensions:
    DataKinds
    ConstraintKinds
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LiberalTypeSynonyms
    MultiParamTypeClasses
    NoImplicitPrelude
    PackageImports
    PolyKinds
    RankNTypes
    TypeApplications
    TypeFamilies
    TypeOperators
  default-language: Haskell2010
  ghc-options: -fno-warn-tabs
