name:                pandora
version:             0.1.0
synopsis:            A box of patterns and paradigms
description:         Humble attempt to define a library for problem solving based on math abstractions.
homepage:            https://github.com/iokasimov/pandora
license:             MIT
license-file:        LICENSE
extra-source-files:  CHANGELOG.md
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2019 Murat Kasimov
category:            Data, Control
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/pandora.git

library
  exposed-modules:
    Pandora.Core.Functor
    Pandora.Core.Morphism
    Pandora.Pattern.Functor
    Pandora.Pattern.Object
    Pandora.Paradigm.Basis
    Pandora.Paradigm.Controlflow
    Pandora.Paradigm.Inventory
    Pandora.Paradigm.Structure
  default-extensions:
    DataKinds
    ConstraintKinds
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LiberalTypeSynonyms
    MultiParamTypeClasses
    NoImplicitPrelude
    PackageImports
    PolyKinds
    RankNTypes
    TypeApplications
    TypeFamilies
    TypeOperators
  default-language: Haskell2010
  ghc-options: -fno-warn-tabs
